# pgbackrest

./: meson.build  meson_options.txt
src/: Makefile.in  configure  meson.build
src/command/backup/: backup.c
src/command/restore/: file.c
src/command/server/: server.c
src/common/: assert.h  error.h  lock.c  time.c
src/common/io/socket/: common.c  server.c
src/common/type/: collection.c  collection.h  convert.c  list.h  path.c  path.h  string.c  string.h
src/config/: config.auto.h.pgbackrest.tmp  parse.c
src/port/mingw/: dirmod.c  flock.c  grp.h  link.c  netdb.h  pgsleep.c  poll.h  port.h  pwd.h  strerror.c  strlcpy.c  system.c  win32env.c  win32error.c  win32stat.c
src/port/mingw/include/: missing.h  netdb.h  poll.h  port.h  pwd.h
src/port/mingw/netinet/: tcp.h
src/port/mingw/sys/: select.h  socket.h  wait.h
src/storage/: directoryItr.c  directoryItr.h  info.h  iterator.c  iterator.h  newIterator.c  newIterator.h  scan.c  scan.h  storage.c  storage.intern.h
src/storage/posix/: readDir.c  readDir.h  readdir.c  readdir.h  storage.c  write.c
src/storage/s3/: storage.c  storage.intern.h
test/: define.yaml
test/src/: meson.build  pgTest.h
test/src/bootstrap/: meson.build
test/src/bootstrap/common/: logTest.c
test/src/command/test/: build.c  test.c
test/src/common/: harnessDebug.h  harnessTest.c  harnessTest.h
test/src/module/common/: errorTest.c  logTest.c  regExpTest.c  typeCollectionTest.c  typeListTest.c  userTest.c
test/src/module/config/: parseTest.c
test/src/module/info/: manifestTest.c
test/src/module/storage/: scanTest.c
(+3 files in other folders)
